Commit for safety

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,38 +1,13 @@
-- title: Start
+- title: Home
   url: "/"
   side: left
 
-- title: Getting Started
-  url: "/getting-started/"
+- title: "Research"
+  url: "/research/"
   side: left
 
-- title: "Templates"
-  url: "/design/"
-  side: left
-  dropdown:
-  - title: "Grid & Colors"
-    url: "/design/grid/"
-  - title: "Typography"
-    url: "/design/typography/typography/"
-  - title: "Page/Post"
-    url: "/design/page/"
-  - title: "Post-Left-Sidebar"
-    url: "/design/post-left-sidebar/"
-  - title: "Post-Right-Sidebar"
-    url: "/design/post-right-sidebar/"
-  - title: "Page Full-Width"
-    url: "/design/page-fullwidth/"
-  - title: "Blog-Page"
-    url: "/blog/"
-  - title: "Video"
-    url: "/design/video/"
-  - title: "Gallery"
-    url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
-
-- title: "Header Styles"
-  url: "/headers/"
+- title: "People"
+  url: "/people/"
   side: left
   dropdown:
   - title: "Header with Full-Width-Image"
@@ -50,8 +25,8 @@
   - title: "No Header but Image"
     url: "/design/no-header-but-image/"
 
-- title: Documentation
-  url: "/documentation/"
+- title: Publications
+  url: "/publications/"
   side: left
   dropdown:
   - title: "Changelog"
@@ -59,12 +34,20 @@
   - title: "Roadmap"
     url: "/roadmap/"
 
-- title: Blog
-  url: "/blog/"
+- title: Facilities
+  url: "/facilities/"
   side: left
   dropdown:
   - title: "Blog Archive"
     url: "/blog/archive/"
+
+- title: Teaching
+  url: "/teaching/"
+  side: left
+
+- title: Recognition
+  url: "/recognition/"
+  side: left
 
 - title: "Search"
   url: "/search/"
