Minor fix to urls in config

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author: indra
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://dag100.github.io'
-baseurl: '/prof-site'
+baseurl: '/prof-website'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
@@ -39,7 +39,7 @@ improve_content:
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://dag100.github.io/prof-site/images/'
+urlimg: 'https://dag100.github.io/prof-website/images/'
 
 
 # Logo size is 600x80 pixels
